--- a/web/DATA/HTML/WIDGET/masker.html
+++ b/web/DATA/HTML/WIDGET/masker.html
@@ -1,6 +1,8 @@
 <div id="masker_wrapper" class="masker_wrapper" mid="0">
   <span class="hint">Click to change shape</span>
-  <div class="shape"><img src="" /><span /></div>
+  <div class="shape">
+    <img src="./images/common/masker_round.png" /><span />
+  </div>
   <span class="resizer lt" />
   <span class="resizer rt" />
   <span class="resizer lb" />
