--- a/web/DATA/WLS1/HTML/focus.html
+++ b/web/DATA/WLS1/HTML/focus.html
@@ -21,7 +21,7 @@
   $(document).ready(function () {
     //create contents
     let targetNode = $(contentXML).find(
-      "section:eq(" + (parseInt(uid) - 1) + ")",
+      "section:eq(" + (parseInt(uid) - 1) + ")"
     );
     $(targetNode)
       .find("item")
@@ -36,7 +36,7 @@
         ) {
           itemHTML += `<span><img src="./DATA/${sid}/BOOK${bid}/IMAGES/${comboArray[0]}" /></span>`;
           $("#module_wrapper .assetsPreload").append(
-            `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${comboArray[0]}"/>`,
+            `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${comboArray[0]}"/>`
           );
         }
         if (
@@ -58,7 +58,7 @@
           for (var k = 0; k < pptArray.length; k++) {
             itemHTML += `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${pptArray[k]}"/>`;
             $("#module_wrapper .assetsPreload").append(
-              `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${pptArray[k]}"/>`,
+              `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${pptArray[k]}"/>`
             );
           }
           itemHTML += `</div><div class="pagination"></div></div>`;
@@ -77,7 +77,7 @@
             if (!isitEmpty(source[3])) {
               itemHTML += `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${source[3]}"/>`;
               $("#module_wrapper .assetsPreload").append(
-                `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${source[3]}"/>`,
+                `<img src="./DATA/${sid}/BOOK${bid}/IMAGES/${source[3]}"/>`
               );
             }
             itemHTML += `<p>${source[1]}</p>
@@ -219,7 +219,7 @@
             if ($(this).hasClass("active")) {
               rootSoundEffectName(
                 $(".contents > div.selected").find("audio").attr("src"),
-                true,
+                true
               );
             } else {
               closePlayer();
@@ -335,7 +335,7 @@
               //
             } else {
               $(".contents > div.selected .qa li.selected").removeClass(
-                "showAns",
+                "showAns"
               );
             }
           });
