drag remove range / WS funtime

--- a/web/DATA/WS/HTML/funtime.html
+++ b/web/DATA/WS/HTML/funtime.html
@@ -116,7 +116,7 @@
 
             if ($(this).hasClass("active")) {
               rootSoundEffectName(
-                $(".contents > div.selected").find("audio.song").attr("src"),
+                $(".contents > div.selected").find("audio.kala").attr("src"),
                 true
               );
             } else {
