--- a/web/DATA/WBS3/HTML/wb.html
+++ b/web/DATA/WBS3/HTML/wb.html
@@ -492,7 +492,9 @@
       lowlagSFX();
       activeSFX();
     }
-    rootSoundEffectName(tar.find("audio").attr("src"));
+    setTimeout(function () {
+      rootSoundEffectName(tar.find("audio").attr("src"));
+    }, 1400);
   };
   var initWB = function () {
     inOrderCard();
