--- a/web/DATA/WLS1/HTML/bp.html
+++ b/web/DATA/WLS1/HTML/bp.html
@@ -224,7 +224,14 @@
     }
     currentAudio.pause();
     currentAudio.currentTime = 0;
-    currentAudio.play();
+    var curID = parseInt($("#rbg").attr("curID"));
+    if (autoplayID == 999 && curID == 999) {
+      setTimeout(function () {
+        currentAudio.play();
+      }, soundLag);
+    } else {
+      currentAudio.play();
+    }
     $(currentAudio)
       .unbind()
       .on("ended", function () {
