--- a/web/DATA/GP/HTML/slwt.html
+++ b/web/DATA/GP/HTML/slwt.html
@@ -203,7 +203,9 @@
       lowlagSFX();
       activeSFX();
     }
-    rootSoundEffectName(tar.find("audio").attr("src"));
+    setTimeout(function () {
+      rootSoundEffectName(tar.find("audio").attr("src"));
+    }, soundLag);
   };
   var initWB = function () {
     inOrderCard();
