ws funtime_activity.html

--- a/web/DATA/WS/HTML/funtime_activity.html
+++ b/web/DATA/WS/HTML/funtime_activity.html
@@ -201,7 +201,7 @@
     }
 
     var posX = ev.deltaX / stageRatioReal + lastPosX;
-    var posY = ev.deltaY / Real + lastPosY;
+    var posY = ev.deltaY / stageRatioReal + lastPosY;
 
     if (isDragging && $elem) {
       $elem.style.left = posX + "px";
